--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,12 +10,25 @@
 	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 	<uses-permission android:name="android.permission.ACCESS_GPS" />
 	<uses-permission android:name="android.permission.CAMERA" />
-	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" android:maxSdkVersion="28" />
-	<uses-feature android:name="android.hardware.camera" android:required="true" />
-	<uses-feature android:name="android.hardware.location" android:required="true" />
-	<uses-feature android:name="android.hardware.sensor.accelerometer" android:required="true" />
-	<uses-feature android:name="android.hardware.sensor.compass" android:required="true" />
-	<uses-feature android:glEsVersion="0x00020000" android:required="true" />
+	<uses-permission
+		android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+		android:maxSdkVersion="28" />
+
+	<uses-feature
+		android:name="android.hardware.camera"
+		android:required="true" />
+	<uses-feature
+		android:name="android.hardware.location"
+		android:required="true" />
+	<uses-feature
+		android:name="android.hardware.sensor.accelerometer"
+		android:required="true" />
+	<uses-feature
+		android:name="android.hardware.sensor.compass"
+		android:required="true" />
+	<uses-feature
+		android:glEsVersion="0x00020000"
+		android:required="true" />
 
 	<application
 		android:allowBackup="true"
@@ -26,7 +39,13 @@
 		android:roundIcon="@mipmap/ic_launcher_round"
 		android:supportsRtl="true"
 		android:theme="@style/Theme.Looktab"
+		android:usesCleartextTraffic="true"
 		tools:targetApi="31">
+		<activity
+			android:name=".WebActivity"
+			android:exported="true" >
+
+		</activity>
 		<activity
 			android:name=".MainActivity"
 			android:exported="true">
