--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,7 @@ android {
 
         buildFeatures{
             dataBinding = true
+            viewBinding = true
         }
     }
 
@@ -25,6 +26,7 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -42,13 +44,51 @@ android {
 //}
 
 dependencies {
+    // Android KTX
     implementation files('libs/wikitudesdk.aar')
 
+    //// Android AR
     implementation 'com.google.ar:core:1.29.0'
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.6.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+
+    //// AndroidX
+    implementation("androidx.appcompat:appcompat:1.3.1")
+    implementation("androidx.constraintlayout:constraintlayout:2.1.0")
+    implementation("androidx.recyclerview:recyclerview:1.2.1")
+    implementation("androidx.viewpager2:viewpager2:1.0.0")
+    implementation("androidx.core:core-ktx:1.9.0")
+    implementation("androidx.collection:collection-ktx:1.1.0")
+    implementation("androidx.fragment:fragment-ktx:1.3.6")
+
+    //// Lifecycle
+    implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1")
+    implementation("androidx.lifecycle:lifecycle-livedata-ktx:2.3.1")
+    implementation("androidx.lifecycle:lifecycle-reactivestreams-ktx:2.3.1")
+    implementation("androidx.lifecycle:lifecycle-common-java8:2.3.1")
+
+    //Kotlin
+    implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.5.30")
+    implementation("org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.30")
+
+    //Glide
+    implementation("com.github.bumptech.glide:glide:4.11.0")
+    implementation("com.github.bumptech.glide:compiler:4.11.0")
+    implementation("com.github.bumptech.glide:okhttp3-integration:4.9.0")
+
+
+    implementation("com.squareup.retrofit2:retrofit:2.9.0")
+    implementation("com.squareup.retrofit2:converter-gson:2.9.0")
+    implementation("com.squareup.retrofit2:adapter-rxjava3:2.9.0")
+
+    implementation("com.squareup.okhttp3:okhttp-bom:4.9.0")
+    implementation("com.squareup.okhttp3:okhttp")
+    implementation("com.squareup.okhttp3:logging-interceptor")
+
+    //rxjava_version
+    implementation("io.reactivex.rxjava3:rxandroid:3.0.0")
+    implementation("io.reactivex.rxjava3:rxjava:3.1.3")
+
+
     implementation 'androidx.databinding:databinding-runtime:7.3.0'
     implementation 'com.google.android.gms:play-services-measurement-api:21.1.0'
     implementation 'com.google.firebase:firebase-common-ktx:20.2.0'
@@ -56,8 +96,4 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1"
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.5.1"
-    implementation "androidx.lifecycle:lifecycle-reactivestreams-ktx:2.5.1"
-//    implementation "androidx.lifecycle:lifecycle-common-java8:2.5.1"
 }
