--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,32 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-plugins {
-    id 'com.android.application' version '7.2.2' apply false
-    id 'com.android.library' version '7.2.2' apply false
-    id 'org.jetbrains.kotlin.android' version '1.7.10' apply false
+buildscript {
+    repositories {
+        google()
+        mavenCentral()
+        jcenter()
+        maven { url "https://jitpack.io" }
+    }
+    dependencies {
+        classpath('com.appsflyer:af-android-sdk:6.3.2')
+        classpath('com.android.tools.build:gradle:7.1.0')
+        classpath("com.google.gms:google-services:4.3.10")
+//        classpath(Libs.Hilt.gradlePlugin)
+        classpath('org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.10')
+        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.20")
+        classpath('com.google.android.gms:oss-licenses-plugin:0.10.4')
+
+    }
 }
 
-task clean(type: Delete) {
-    delete rootProject.buildDir
+
+allprojects {
+    repositories {
+        google()
+        mavenCentral()
+        maven { url 'https://devrepo.kakao.com/nexus/content/groups/public/' }
+    }
 }
+
+//tasks.register("clean", Delete::class) {
+//    delete(rootProject.buildDir)
+//}
