--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,9 @@
 plugins {
-    id 'kotlin-kapt'
     id 'com.android.application'
-    id 'org.jetbrains.kotlin.android'
+    id 'com.google.gms.google-services'
+    id 'com.google.firebase.crashlytics'
+    id 'kotlin-android'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -16,7 +18,7 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
-        buildFeatures{
+        buildFeatures {
             dataBinding = true
             viewBinding = true
         }
@@ -35,14 +37,11 @@ android {
     }
     kotlinOptions {
         jvmTarget = '1.8'
+        freeCompilerArgs = ['-Xjvm-default=compatibility']
+
     }
 }
 
-//repositories {
-//    flatDir {
-//        dirs 'libs'
-//    }
-//}
 
 dependencies {
     // Android KTX
@@ -52,27 +51,30 @@ dependencies {
     implementation 'com.google.ar:core:1.29.0'
     implementation 'com.google.android.material:material:1.6.1'
 
-    //// AndroidX
-    implementation("androidx.appcompat:appcompat:1.3.1")
-    implementation("androidx.constraintlayout:constraintlayout:2.1.0")
+
+
+    implementation("androidx.core:core-ktx:1.7.0")
+    implementation("androidx.appcompat:appcompat:1.5.1")
+    implementation("androidx.constraintlayout:constraintlayout:2.1.4")
     implementation("androidx.recyclerview:recyclerview:1.2.1")
     implementation("androidx.viewpager2:viewpager2:1.0.0")
-    implementation("androidx.core:core-ktx:1.9.0")
-    implementation("androidx.collection:collection-ktx:1.1.0")
-    implementation("androidx.fragment:fragment-ktx:1.3.6")
+    implementation("androidx.collection:collection-ktx:1.2.0")
+    implementation("androidx.fragment:fragment-ktx:1.5.4")
+    implementation 'com.google.android.material:material:1.7.0'
 
     //// Lifecycle
-    implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1")
-    implementation("androidx.lifecycle:lifecycle-livedata-ktx:2.3.1")
-    implementation("androidx.lifecycle:lifecycle-reactivestreams-ktx:2.3.1")
-    implementation("androidx.lifecycle:lifecycle-common-java8:2.3.1")
+    implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1")
+    implementation("androidx.lifecycle:lifecycle-livedata-ktx:2.5.1")
+    implementation("androidx.lifecycle:lifecycle-reactivestreams-ktx:2.5.1")
+//    implementation("androidx.lifecycle:lifecycle-common-java8:2.5.1")
 
     //Kotlin
-    implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.5.30")
-    implementation("org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.30")
+//    implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.7.10")
+//    implementation("org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.30")
+//    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.10"
 
     //Glide
-    implementation("com.github.bumptech.glide:glide:4.11.0")
+    implementation("com.github.bumptech.glide:glide:4.12.0")
     implementation("com.github.bumptech.glide:compiler:4.11.0")
     implementation("com.github.bumptech.glide:okhttp3-integration:4.9.0")
 
@@ -90,11 +92,12 @@ dependencies {
     implementation("io.reactivex.rxjava3:rxjava:3.1.3")
 
 
-    implementation 'androidx.databinding:databinding-runtime:7.3.0'
-    implementation 'com.google.android.gms:play-services-measurement-api:21.1.0'
-    implementation 'com.google.firebase:firebase-common-ktx:20.2.0'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation 'androidx.databinding:databinding-runtime:7.3.1'
+//    implementation 'com.google.android.gms:play-services-measurement-api:21.1.0'
+//    implementation 'com.google.firebase:firebase-common-ktx:20.2.0'
 
+
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.4'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
 }
