--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,13 +42,10 @@
 		android:usesCleartextTraffic="true"
 		tools:targetApi="31">
 		<activity
-			android:name=".MypageActivity"
+			android:name=".feature.ar.ArActivity"
 			android:exported="false" />
 		<activity
-			android:name=".WebActivity"
-			android:exported="true"></activity>
-		<activity
-			android:name=".feature.ar.ArActivity"
+			android:name=".feature.main.MainActivity"
 			android:exported="true">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
