--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+//    kotlinVersion = "1.6.10"
+    ext.kotlin_version = "1.6.10 "
     repositories {
         google()
         mavenCentral()
@@ -7,13 +9,11 @@ buildscript {
         maven { url "https://jitpack.io" }
     }
     dependencies {
-        classpath('com.appsflyer:af-android-sdk:6.3.2')
-        classpath('com.android.tools.build:gradle:7.1.0')
-        classpath("com.google.gms:google-services:4.3.10")
-//        classpath(Libs.Hilt.gradlePlugin)
-        classpath('org.jetbrains.kotlin:kotlin-gradle-plugin:1.7.10')
-        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.20")
-        classpath('com.google.android.gms:oss-licenses-plugin:0.10.4')
+        classpath "com.android.tools.build:gradle:7.2.1"
+        classpath "com.google.gms:google-services:4.3.10"
+        classpath "com.google.firebase:firebase-crashlytics-gradle:2.8.1"
+//        classpath "com.google.dagger:hilt-android-gradle-plugin:$hiltVersion"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.10"
 
     }
 }
