--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,8 +11,8 @@ android {
 
     defaultConfig {
         applicationId "com.looktabinc"
-        minSdk 23
-        targetSdk 32
+        minSdk 26
+        targetSdk 31
         versionCode 1
         versionName "1.0"
 
@@ -38,7 +38,10 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
         freeCompilerArgs = ['-Xjvm-default=compatibility']
+    }
 
+    packagingOptions {
+        exclude 'META-INF/*'
     }
 }
 
@@ -51,27 +54,25 @@ dependencies {
     implementation 'com.google.ar:core:1.29.0'
     implementation 'com.google.android.material:material:1.6.1'
 
-
-
     implementation("androidx.core:core-ktx:1.7.0")
-    implementation("androidx.appcompat:appcompat:1.5.1")
+    implementation("androidx.appcompat:appcompat:1.4.1")
     implementation("androidx.constraintlayout:constraintlayout:2.1.4")
     implementation("androidx.recyclerview:recyclerview:1.2.1")
     implementation("androidx.viewpager2:viewpager2:1.0.0")
     implementation("androidx.collection:collection-ktx:1.2.0")
     implementation("androidx.fragment:fragment-ktx:1.5.4")
-    implementation 'com.google.android.material:material:1.7.0'
+    implementation 'com.google.android.material:material:1.6.0'
 
     //// Lifecycle
     implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1")
     implementation("androidx.lifecycle:lifecycle-livedata-ktx:2.5.1")
     implementation("androidx.lifecycle:lifecycle-reactivestreams-ktx:2.5.1")
-//    implementation("androidx.lifecycle:lifecycle-common-java8:2.5.1")
 
-    //Kotlin
-//    implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.7.10")
-//    implementation("org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.30")
-//    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.10"
+    // Enable live data and view model
+    implementation "androidx.activity:activity-ktx:1.1.0"
+
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
+    implementation 'com.github.near:near-api-kotlin:1.0.5'
 
     //Glide
     implementation("com.github.bumptech.glide:glide:4.12.0")
@@ -93,9 +94,6 @@ dependencies {
 
 
     implementation 'androidx.databinding:databinding-runtime:7.3.1'
-//    implementation 'com.google.android.gms:play-services-measurement-api:21.1.0'
-//    implementation 'com.google.firebase:firebase-common-ktx:20.2.0'
-
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
