--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,6 +41,23 @@
 		android:theme="@style/Theme.Looktab"
 		android:usesCleartextTraffic="true"
 		tools:targetApi="31">
+
+		<activity
+			android:name=".feature.wallet.NearActivity"
+			android:exported="true">
+<!--			<intent-filter>-->
+<!--				<action android:name="android.intent.action.MAIN" />-->
+<!--				<category android:name="android.intent.category.LAUNCHER" />-->
+<!--			</intent-filter>-->
+			<intent-filter>
+				<action android:name="android.intent.action.VIEW" />
+				<category android:name="android.intent.category.DEFAULT" />
+				<category android:name="android.intent.category.BROWSABLE" />
+				<data
+					android:host="success-auth"
+					android:scheme="near" />
+			</intent-filter>
+		</activity>
 		<activity
 			android:name=".feature.ar.ArActivity"
 			android:exported="false" />
