--- a/build.gradle
+++ b/build.gradle
@@ -5,27 +5,30 @@ buildscript {
     repositories {
         google()
         mavenCentral()
-        jcenter()
-        maven { url "https://jitpack.io" }
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:7.2.1"
+        classpath "com.android.tools.build:gradle:4.1.3"
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.7.10'
+//        classpath "com.android.tools.build:gradle:7.2.1"
         classpath "com.google.gms:google-services:4.3.10"
         classpath "com.google.firebase:firebase-crashlytics-gradle:2.8.1"
 //        classpath "com.google.dagger:hilt-android-gradle-plugin:$hiltVersion"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.10"
+//        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.10"
 
+        // NOTE: Do not place your application dependencies here; they belong
+        // in the individual module build.gradle files
     }
+
 }
 
 
-allprojects {
-    repositories {
-        google()
-        mavenCentral()
-        maven { url 'https://devrepo.kakao.com/nexus/content/groups/public/' }
-    }
-}
+//allprojects {
+//    repositories {
+//        google()
+//        mavenCentral()
+//        maven { url 'https://devrepo.kakao.com/nexus/content/groups/public/' }
+//    }
+//}
 
 //tasks.register("clean", Delete::class) {
 //    delete(rootProject.buildDir)
