--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,11 +42,14 @@ android {
 
     packagingOptions {
         exclude 'META-INF/*'
+        exclude 'META-INF/gradle/incremental.annotation.processors'
     }
 }
 
 
 dependencies {
+    implementation(project(":knear"))
+
     // Android KTX
     implementation files('libs/wikitudesdk.aar')
 
@@ -72,7 +75,7 @@ dependencies {
     implementation "androidx.activity:activity-ktx:1.1.0"
 
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
-    implementation 'com.github.near:near-api-kotlin:1.0.5'
+//    implementation 'com.github.near:near-api-kotlin:1.0.5'
 
     //Glide
     implementation("com.github.bumptech.glide:glide:4.12.0")
@@ -91,7 +94,6 @@ dependencies {
     //rxjava_version
     implementation("io.reactivex.rxjava3:rxandroid:3.0.0")
     implementation("io.reactivex.rxjava3:rxjava:3.1.3")
-
 
     implementation 'androidx.databinding:databinding-runtime:7.3.1'
 
